# codec2

./: .cproject  .project  Makefile.am  README  autogen.sh  configure.ac
math-neon/: Makefile.am  math_vec4.c
math-neon/include/: math_neon.h
octave/: plresample.m  quadinterp.m
src/: Makefile.am  Makefile.in  ampexp.c  c2demo.c  c2sim.c  codec2.c  codec2_internal.h  comp.c  defines.h  fdmdv.c  fdmdv_internal.h  fft.c  fft.h  genlspdtcb.c  interp.c  interp.h  lpc.c  lsp.c  nlp.c  phase.c  phase.h  phaseexp.c  phaseexp.h  postfilter.c  quantise.c  quantise.h  sine.c  sine.h
unittest/: Makefile.am  Makefile.in  dvdongle2.c  genbands.c  tcodec2.c  tlspsens.c  tnlp.c  vq_clip_test.c  vqtrain_clip.c
