AM_CFLAGS = -Isrc -fPIC -Wall -O3 -lm
AUTOMAKE_OPTS = gnu
NAME = codec2
AM_CPPFLAGS = $(AM_CFLAGS)

EXTRA_DIST = octave/glottal.m \
octave/lsp_pdf.m \
octave/phase.m \
octave/pl2.m \
octave/plinterp.m \
octave/plnlp.m \
octave/plpitch.m \
octave/postfilter.m \
octave/load_raw.m \
octave/phase2.m \
octave/pitch_test.m \
octave/plamp.m \
octave/pl.m \
octave/plphase.m \
octave/png.m \
octave/pulse.m \
raw/b0067.raw \
raw/forig_speex_8k.raw \
raw/hts1.raw \
raw/hts2.raw \
raw/mmt1.raw \
raw/morig_speex_8k.raw \
raw/f2400.raw \
raw/hts1a_g729a.raw \
raw/hts2a_g729a.raw \
raw/hts.raw \
raw/mmt1_speex_8k.raw \
raw/forig_g729a.raw \
raw/hts1a_gsm13k.raw \
raw/hts2a_gsm13k.raw \
raw/m2400.raw \
raw/morig_g729a.raw \
raw/forig_gsm13k.raw \
raw/hts1a.raw \
raw/hts2a.raw \
raw/mmt1_g729a.raw \
raw/morig_gsm13k.raw \
raw/forig.raw \
raw/hts1a_speex_8k.raw \
raw/hts2a_speex_8k.raw \
raw/mmt1_gsm13k.raw \
raw/morig.raw \
script/menu.sh \
script/playraw.sh \
script/raw2wav.sh \
script/wav2raw.sh \
wav/f2400.wav \
wav/hts1a_c2_v0.1.wav \
wav/hts1a.wav \
wav/hts2a_speex_8k.wav \
wav/mmt1_speex_8k.wav \
wav/morig.wav \
wav/forig_speex_8k.wav \
wav/hts1a_g729a.wav \
wav/hts2a_c2_v0.1.wav \
wav/hts2a.wav \
wav/mmt1.wav \
wav/forig.wav \
wav/hts1a_speex_8k.wav \
wav/hts2a_g729a.wav \
wav/m2400.wav \
wav/morig_speex_8k.wav \
$(top_srcdir)/unittest/lsp2.txt \
$(top_srcdir)/unittest/lsp7.txt \
$(top_srcdir)/unittest/lspd78.txt \
$(top_srcdir)/unittest/lsp3.txt \
$(top_srcdir)/unittest/lsp8.txt \
$(top_srcdir)/unittest/lspd910.txt \
$(top_srcdir)/unittest/lsp4.txt \
$(top_srcdir)/unittest/lsp9.txt \
$(top_srcdir)/unittest/lsp10.txt \
$(top_srcdir)/unittest/lsp5.txt \
$(top_srcdir)/unittest/lsp1.txt \
$(top_srcdir)/unittest/lsp6.txt \
$(top_srcdir)/unittest/lspd456.txt \
$(top_srcdir)/unittest/lspd678910.txt \
$(top_srcdir)/src/codebook/lsp1.txt \
$(top_srcdir)/src/codebook/lsp2.txt \
$(top_srcdir)/src/codebook/lsp3.txt \
$(top_srcdir)/src/codebook/lsp4.txt \
$(top_srcdir)/src/codebook/lsp5.txt \
$(top_srcdir)/src/codebook/lsp6.txt \
$(top_srcdir)/src/codebook/lsp7.txt \
$(top_srcdir)/src/codebook/lsp8.txt \
$(top_srcdir)/src/codebook/lsp9.txt \
$(top_srcdir)/src/codebook/lsp10.txt \
$(top_srcdir)/src/codebook/dlsp1.txt \
$(top_srcdir)/src/codebook/dlsp2.txt \
$(top_srcdir)/src/codebook/dlsp3.txt \
$(top_srcdir)/src/codebook/dlsp4.txt \
$(top_srcdir)/src/codebook/dlsp5.txt \
$(top_srcdir)/src/codebook/dlsp6.txt \
$(top_srcdir)/src/codebook/dlsp7.txt \
$(top_srcdir)/src/codebook/dlsp8.txt \
$(top_srcdir)/src/codebook/dlsp9.txt \
$(top_srcdir)/src/codebook/dlsp10.txt


SUBDIRS = src unittest
