lib_LTLIBRARIES = libmath_neon.la
# Source files
libmath_neon_la_SOURCES = math_expf.c math_sinhf.c math_mat3.c math_vec4.c math_tanhf.c math_cosf.c math_powf.c math_mat4.c math_acosf.c math_fmodf.c math_log10f.c math_floorf.c math_atan2f.c math_fabsf.c math_vec2.c math_runfast.c math_invsqrtf.c math_sinf.c math_asinf.c math_tanf.c math_modf.c math_sincosf.c math_logf.c math_ldexpf.c math_sqrtf.c math_atanf.c math_ceilf.c math_sqrtfv.c math_sinfv.c math_coshf.c math_vec3.c math_frexpf.c math_mat2.c

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libmath_neon_la_CFLAGS = -I$(top_srcdir)/math-neon/include -std=gnu99
